react practice ( 10 videos) and css code

--- a/JS Practice/index.html
+++ b/JS Practice/index.html
@@ -10,6 +10,6 @@
     <button id="clickMe">
         Click me
     </button>
-    <script src="create_promises.js"></script>
+    <script src="node.js"></script>
 </body>
 </html>
